--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ table.params {
 
 pre.codeblock {
 	background-color: #293134;
-	padding: 5px 10px 5px 10px;
+	padding: 10px 10px 10px 17px;
 	font-size: 14px;
 }
 pre.codeblock a {
@@ -104,6 +104,7 @@ pre.codeblock a {
 }
 
 #sidebar {
+	display: block;
 	z-index: 1000;
 	position: fixed;
 	top: 0; left: -190px;
